Fixed z-index, which caused sidebar to lose functionality

--- a/src/style.css
+++ b/src/style.css
@@ -31,10 +31,10 @@ header {
     background-color: var(--header);
     padding: 1rem 1rem !important;
     box-shadow: 0px 0px 2px 2px var(--header);
+    z-index: 1;
 }
 
 aside {
-    z-index: -1;
     background-color: var(--aside);
     padding: 1rem 0.5rem 1rem 1rem !important;
 }
